Fix uneven spacing in references

--- a/css/default.sass
+++ b/css/default.sass
@@ -50,11 +50,12 @@ html
 
 #refs, .footnotes
   .go-back
-      transition: ease 1s
-      font-weight: 700
-      opacity: 0
-      visibility: hidden
+    transition: opacity ease 1s
+    font-weight: 700
+    opacity: 0
+    width: 0
+    height: 0
+    display: inline flow-root
   *:target .go-back
-      opacity: 1
-      visibility: visible
+    opacity: 1
 
